Few updates
- fix exec-maven-plugin config
- disable concurrent deployment
- update module-info.java
- add interceptor and observer method