@@ -1,69 +1,81 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <groupId>org.none.just.test</groupId>
-    <artifactId>JDK9Playground</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <packaging>jar</packaging>
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.9</maven.compiler.source>
-        <maven.compiler.target>1.9</maven.compiler.target>
-    </properties>
-    
-    
-    <dependencies>
-        <dependency>
-            <groupId>org.jboss.weld.se</groupId>
-            <artifactId>weld-se-shaded</artifactId>
-            <version>3.0.1.Final</version>
-        </dependency>
-    </dependencies>
-    
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.7.0</version>
-                <executions>
-                    <execution>
-                        <id>default-compile</id>
-                        <configuration>
-                            <!-- compile everything to ensure module-info contains right entries -->
-                            <release>9</release>
-                        </configuration>
-                    </execution>
-                    <!--This makes sure it will be backward compatible, e.g. will exclude module-info.java-->
-                    <!--UN-Comment to trigger it-->
-                    <!--                    <execution>
-                        <id>base-compile</id>
-                        <goals>
-                            <goal>compile</goal>
-                        </goals>
-                        <configuration>
-                            <excludes>
-                                <exclude>module-info.java</exclude>
-                            </excludes>
-                            <release>6</release>
-                        </configuration>
-                    </execution>-->
-                </executions>
-                <configuration>
-                    <!-- Only required when JAVA_HOME isn't at least Java 9 and when haven't configured the maven-toolchains-plugin -->
-                    <jdkToolchain>
-                        <version>9</version>
-                    </jdkToolchain>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <version>1.6.0</version>
-                <configuration>
-                    <mainClass>org.none.just.test.jdk9playground.Runner</mainClass>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+   <modelVersion>4.0.0</modelVersion>
+   <groupId>org.none.just.test</groupId>
+   <artifactId>JDK9Playground</artifactId>
+   <version>1.0-SNAPSHOT</version>
+   <packaging>jar</packaging>
+   <properties>
+      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+      <maven.compiler.source>1.9</maven.compiler.source>
+      <maven.compiler.target>1.9</maven.compiler.target>
+   </properties>
+
+
+   <dependencies>
+      <dependency>
+         <groupId>org.jboss.weld.se</groupId>
+         <artifactId>weld-se-shaded</artifactId>
+         <version>3.0.1.Final</version>
+      </dependency>
+      <dependency>
+         <groupId>org.slf4j</groupId>
+         <artifactId>slf4j-simple</artifactId>
+         <version>1.7.2</version>
+      </dependency>
+   </dependencies>
+
+   <build>
+      <plugins>
+         <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.7.0</version>
+            <executions>
+               <execution>
+                  <id>default-compile</id>
+                  <configuration>
+                     <!-- compile everything to ensure module-info contains
+                        right entries -->
+                     <release>9</release>
+                  </configuration>
+               </execution>
+               <!--This makes sure it will be backward compatible, e.g. will
+                  exclude module-info.java -->
+               <!--UN-Comment to trigger it -->
+               <!-- <execution> <id>base-compile</id> <goals> <goal>compile</goal>
+                  </goals> <configuration> <excludes> <exclude>module-info.java</exclude> </excludes>
+                  <release>6</release> </configuration> </execution> -->
+            </executions>
+            <configuration>
+               <!-- Only required when JAVA_HOME isn't at least Java 9 and
+                  when haven't configured the maven-toolchains-plugin -->
+               <jdkToolchain>
+                  <version>9</version>
+               </jdkToolchain>
+            </configuration>
+         </plugin>
+         <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>exec-maven-plugin</artifactId>
+            <version>1.6.0</version>
+            <configuration>
+               <mainClass>org.none.just.test.jdk9playground.Runner</mainClass>
+               <executable>java</executable>
+               <arguments>
+                  <argument>-Dorg.jboss.weld.bootstrap.concurrentDeployment=false</argument>
+                  <argument>-Dorg.jboss.logging.provider=slf4j</argument>
+                  <argument>-Dorg.slf4j.simpleLogger.log.org.jboss.weld=info</argument>
+                  <argument>-p</argument>
+                  <modulepath />
+                  <argument>--add-opens</argument>
+                  <argument>java.base/java.lang=weld.se.shaded</argument>
+                  <argument>-m</argument>
+                  <argument>org.none.jdk9playground/org.none.just.test.jdk9playground.Runner</argument>
+               </arguments>
+            </configuration>
+         </plugin>
+      </plugins>
+   </build>
 </project>
